--- a/templates/_partials/_head.twig
+++ b/templates/_partials/_head.twig
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500;700&family=Nunito:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="alternate" type="application/rss+xml" title="Jeff Bridgforth Article Feed" href="{{ url('posts.rss') }}">
+    <link rel="alternate" type="application/rss+xml" title="Jeff Bridgforth Notes Feed" href="{{ url('notes.rss') }}">
 
     <script>
         (function () {
